# ic-hack-2023

./: .cache  .cache-lhollister03  .gitignore  .python-version  LICENSE  Plans.md  README.md  account.json  config.py  event.json  hello.py  input_protection.py  laura_test  laura_test.py  location_management.py  main.py  pooling.py  pyproject.toml  samconfig.toml  spotifyapi.py  spotifyrequirements.md  template.yaml  testing.py
app/: app.py  lambda_create_account.py  lambda_get_account.py  lambda_get_all_messages.py  lambda_get_event.py  lambda_get_event_split.py  lambda_get_search_string.py  lambda_post_carpooling.py  lambda_post_contribution.py  lambda_post_create_account.py  lambda_post_create_event.py  lambda_post_create_playlists.py  lambda_post_event_add_account.py  lambda_post_message.py  lambda_post_playlist_generate.py  lambda_post_playlist_search_add.py  requirements.txt  setup.py
app/tuz/: database.py  deniswork.py  location_management.py  spotifyapi.py  test.py  webchat_handler.py
app/tuz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
front_end/: fadein.css  front_page.html  front_page.js  general.js  main_page.html  main_page.js  postandget.js  spotify.html  spotify.js
json_examples/: account.json  event.json  payments.json
src/: moneysharing.py
src/account/: update_dietary_info.py
src/payments/: deniswork.py  example.json  moneysharing.py
src/travel/: location_management.py  pooling.py
src/utilities/: helpers.py  input_protection.py
src/webchat/: webchat_handler.py
tests/unit/: test_handler.py
